--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "react-ts-vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "highcharts": "^12.2.0",
+    "highcharts": "^12.3.0",
     "highcharts-react-official": "^3.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
